Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: kind-mendel
          image: himanshi2805/repo1:latest
          ports:
            - containerPort: 8000
