Service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
