Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # ingressClassName: nginx
  rules:
    - host: himanshi.com
      http:
        paths:
          - path: /k8s
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 80
